--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5530,7 +5530,7 @@ FNB:
 
 # Fujitsu
 Fujitsu:
-  regex: '(?:F-01[FHJKL]|F-02[EFGHLK]|F-03[DEFGKHL]|F-04[EGHKJ]|F-05[DEFJ]|F-06[EF]|F-07[DE]|F-08D|F-09[DE]|F-10D|F-[45]1A|F-42A|F-11D|F-12C|M532|FARTM933KZ|901FJ|arrows(?:RX|M03|M0[45](?:-PREMIUM)?)|801FJ|FJL21)(?:[);/ ]|$)'
+  regex: '(?:F-01[FHJKL]|F-02[EFGHLK]|F-03[DEFGKHL]|F-04[EGHKJ]|F-05[DEFJ]|F-06[EF]|F-07[DE]|F-08D|F-09[DE]|F-10D|F-[45]1A|F-[45]2A|F-11D|F-12C|M532|FARTM933KZ|901FJ|arrows(?:RX|M03|M0[45](?:-PREMIUM)?)|801FJ|FJL21)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'F-51A(?:[);/ ]|$)'
@@ -5561,6 +5561,8 @@ Fujitsu:
       model: 'Arrows EF FJL21'
     - regex: 'F-02H(?:[);/ ]|$)'
       model: 'Arrows NX F-02H'
+    - regex: 'F-52A(?:[);/ ]|$)'
+      model: 'Arrows NX9 F-52A'
     - regex: 'F-03D(?:[);/ ]|$)'
       model: 'Arrows Kiss F-03D'
     - regex: 'F-03E(?:[);/ ]|$)'
@@ -7920,7 +7922,7 @@ Diva:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-[0-9]{4}|(?:QC6035|NP501KC|302KC|503KC|602KC|705KC|901KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[13-9]|KYT3[123]|KYF3[123579]|KYX31|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U?|KYV4[1-8]|KYV4[47]|KC-S301AE|X3-KC|S6-KC|E6560[CT]|E6782[L]?|E6790(?:TM)?|[47]04KC|A001KC)(?:[-_]u2?)?(?:[);/ ]|$)'
+  regex: 'Kyocera|KWC-|QC-[0-9]{4}|(?:QC6035|NP501KC|302KC|503KC|602KC|705KC|901KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[13-9]|KYT3[123]|KYF3[123579]|KYX31|KYY2[1-4]|S2151|KC-S701|S[468]-KC|KYV40U?|KYV4[1-8]|KYV4[47]|KC-S301AE|X3-KC|E6560[CT]|E6782[L]?|E6790(?:TM)?|[47]04KC|A001KC|WX10K)(?:[-_]u2?)?(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -7930,6 +7932,8 @@ Kyocera:
       model: 'One S4'
     - regex: 'S6-KC(?:[);/ ]|$)'
       model: 'One S6'
+    - regex: 'S8-KC(?:[);/ ]|$)'
+      model: 'One S8'
     - regex: 'C5155(?:[);/ ]|$)'
       model: 'Rise'
     - regex: '602KC(?:[);/ ]|$)'
@@ -7944,6 +7948,8 @@ Kyocera:
       model: 'Digno T'
     - regex: 'NP501KC(?:[);/ ]|$)'
       model: 'Digno'
+    - regex: 'WX10K(?:[);/ ]|$)'
+      model: 'Digno Dual 2'
     - regex: 'KYV36(?:[);/ ]|$)'
       model: 'Digno Rafre'
     - regex: '901KC(?:[);/ ]|$)'
@@ -8726,9 +8732,11 @@ Lexibook:
 
 # LG
 LG:
-  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))(?:[);/ ]|$)|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|VS820|VS870 4G|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-05D|L-03K|L-01[LJK]|L-[45]1A|901LG|A001LG|80[12]LG|402LG|LGT32|L-02K|L-01F|LM-V40'
+  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))(?:[);/ ]|$)|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|VS820|VS870 4G|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-05D|L-03K|L-01[LJK]|L-52A|L-[45]1A|901LG|A001LG|80[12]LG|402LG|LGT32|L-02K|L-01F|LM-V40|DM-01K'
   device: 'smartphone'
   models:
+    - regex: 'DM-01K'
+      model: 'Disney Mobile DM-01K'
     - regex: 'LG-D325'
       model: 'L70'
     - regex: 'LG-D340F8'
@@ -8913,6 +8921,8 @@ LG:
       model: 'V30 Plus'
     - regex: 'L-51A(?:[);/ ]|$)'
       model: 'V60'
+    - regex: 'L-52A(?:[);/ ]|$)'
+      model: 'Velvet'
     - regex: 'A001LG(?:[);/ ]|$)'
       model: 'V60 ThinQ 5G'
     - regex: '(?:LG-)?VS410PP'
@@ -13757,7 +13767,7 @@ Spice:
 
 # Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[1456789]|SH-M1[12346](?:-y)?|S[357]-SH|SH-[MZ](10|01)|SH-[CL]02|SH-RM(?:1[125]|02)|[34]04SH|401SH|[45]02SH|306SH|[36]05SH|70[1246]SH|80[138]SH|90[1678]SH|50[3679]SH|SHL2[25]|SHV4[0-8]|SHV3[1-9](?:[-_]u)?|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|403SH|603SH|SHF3[34]|SHV4[035][-_]u|SW001SH|SHG0[12]|X4-SH|A002SH|SH-A01|DM-01J|SH-D01|A001SH|606SH|FS801[56]|d-41A)(?:[);/ ]|$)'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?(?:[);/ ]|$)|AQUOS|(?:SH-M0[14-9]|SH-M1[1-6](?:-y)?|S[357]-SH|SH-[MZ](10|01)|SH-[CL]02|SH-RM(?:1[125]|02)|[34]04SH|401SH|[45]02SH|306SH|[36]05SH|70[1246]SH|80[138]SH|90[1678]SH|50[3679]SH|SHL2[25]|SHV4[0-8]|SHV3[1-9](?:[-_]u)?|FS80(?:1[08]|32|28|0[29])|TG-L900S|NP601SH|403SH|603SH|SHF3[134]|SHV4[035][-_]u|SW001SH|SHG0[12]|X4-SH|A002SH|SH-A01|DM-01J|SH-D01|A001SH|606SH|FS801[56]|d-41A|NP805SH)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -13821,9 +13831,11 @@ Sharp:
       model: 'Aquos R5G'
     - regex: 'SH-M16(?:[);/ ]|$)'
       model: 'Aquos S4 Plus'
+    - regex: 'SH-M15(?:[);/ ]|$)'
+      model: 'Aquos S4 SIM'
     - regex: 'SH-C02(?:[);/ ]|$)'
       model: 'Aquos V'
-    - regex: '(SHF3[34])(?:[);/ ]|$)'
+    - regex: '(SHF3[134])(?:[);/ ]|$)'
       model: 'Aquos K $1'
     - regex: '704SH(?:[);/ ]|$)'
       model: 'Simple Smartphone 4'
@@ -13888,9 +13900,11 @@ Sharp:
     - regex: '401SH'
       model: 'Aquos 401SH'
     - regex: 'DM-01J'
-      model: 'Disney Mobile'
+      model: 'Disney Mobile DM-01J'
     - regex: 'A001SH'
       model: 'Simple Sumaho 5'  # (Simple Smartphone 5)
+    - regex: 'NP805SH'
+      model: 'Aquos Keitai 3'
 
     # explicit tablet models
     - regex: 'SH-08E(?:[);/ ]|$)'
