--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9362,3 +9362,21 @@
     model: IVO 6677
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; iBall Andi i9) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.75 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 73.0.3683.75
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: iBall
+    model: Andi i9
+  os_family: Android
+  browser_family: Chrome
