--- a/Tests/fixtures/tablet-3.yml
+++ b/Tests/fixtures/tablet-3.yml
@@ -4684,7 +4684,7 @@
   device:
     type: tablet
     brand: Odys
-    model: Ieos QUAD 10 PRO
+    model: Ieos Quad 10 Pro
   os_family: Android
   browser_family: Chrome
 - 
@@ -8983,3 +8983,75 @@
     model: G20
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.1.2; MediaPad 10 FHD) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.96 Safari/537.36
+  os:
+    name: Android
+    version: 4.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 72.0.3626.96
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Huawei
+    model: MediaPad 10 FHD
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.1.2; MediaPad 7 Lite II) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 Safari/537.36
+  os:
+    name: Android
+    version: 4.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 71.0.3578.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Huawei
+    model: MediaPad 7 Lite II
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.1.2; MediaPad 7 Youth) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.73 Safari/537.36
+  os:
+    name: Android
+    version: 4.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 72.0.3626.73
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Huawei
+    model: MediaPad 7 Youth
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.1.2; MediaPad 7 Vogue) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 Safari/537.36
+  os:
+    name: Android
+    version: 4.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 71.0.3578.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Huawei
+    model: MediaPad 7 Vogue
+  os_family: Android
+  browser_family: Chrome
