--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2372,7 +2372,7 @@ Avvio:
       model: '$1'
 
 # Azumi Mobile (azumi-mobile.com)
-"Azumi Mobile":
+Azumi Mobile:
   regex: 'Azumi[_ ]|(?:SPEED55)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
